# gyros-os

./: .env.example  .gitignore  99-tech-debt.md  Dockerfile.api  Dockerfile.worker  Makefile  README.md  STATUS.md  docker-compose.yml  langgraph.json  nixpacks.toml  pyproject.toml  railway.json
.claude/: settings.json
db/migrations/: 005_gyros_os_foundation.sql  006_approvals.sql  007_oauth_credentials.sql  008_kb_file_storage.sql  009_chat_threads.sql
docs/: ADDING_AGENTS.md  ARCHITECTURE.md  DEPLOY.md  GETTING_STARTED.md  GYROS_OS.md  RAILWAY.md  STRESS_TESTING.md  STRESS_TESTING_IN_PROGRESS.md  TWILIO.md  guia-debug-manual.md
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: create-user.ts  seed-admin.ts
frontend/src/: proxy.ts
patch/: README.md
prompts/: curadoria_cimi360.md  studio_assistant_default.md
scripts/: create_user.py  enqueue_pipefy_event.py  run_migrations.py  start.sh  test_drive_sync.py  test_pipefy_drive.py
stress/: README.md  locustfile.py
tests/: __init__.py  conftest.py
tests/integration/: helpers.py  test_context_middleware.py  test_docker_demo_features.py  test_media_real.py  test_memory.py  test_realistic_flows.py  test_webhook.py
tests/rag/: test_ingest_and_retrieve.py
tests/unit/: test_approvals_parser.py  test_calendar_tool.py  test_config.py  test_debounce.py  test_gcal_executor.py  test_llm_factory.py  test_loader.py  test_media_preprocess.py  test_memory_flag.py  test_memory_middleware.py  test_memory_tool.py  test_models.py  test_processor_twilio.py  test_queue_claim.py  test_queue_retry.py  (+3 more)
(+126 files in other folders)
